k8s/01-db-secrets.yaml
# Define un espacio de trabajo lógico para la aplicación.
# Es una buena práctica para mantener el clúster organizado.
apiVersion: v1
kind: Namespace
metadata:
  name: teslo-shop
