k8s/02-postgres.yaml

# 2. Servicio Interno para la Base de Datos
# Crea una dirección de red estable dentro del clúster para que el backend pueda encontrar a Postgres.
apiVersion: v1
kind: Service
metadata:
  # Este es el nombre que usará el backend como DB_HOST
  name: teslo-postgres-svc
  namespace: teslo-shop
spec:
  selector:
    # Redirige el tráfico a cualquier pod con la etiqueta "app: teslo-postgres"
    app: teslo-postgres
  ports:
    - protocol: TCP
      port: 5432       # El puerto del servicio
      targetPort: 5432 # El puerto del contenedor de Postgres

---

# 3. Despliegue de la Base de Datos
# Define cómo se debe ejecutar el contenedor de Postgres.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teslo-postgres-deployment
  namespace: teslo-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: teslo-postgres
  template:
    metadata:
      labels:
        app: teslo-postgres
    spec:
      containers:
      - name: postgres
        image: postgres:14.3 # La misma versión que usabas en docker-compose
        ports:
        - containerPort: 5432
        # Aquí definimos las variables de entorno para Postgres.
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data
          subPath: postgres-data
      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
          # Asocia este volumen con el PersistentVolumeClaim que definimos arriba.
          claimName: postgres-pvc
