k8s/03-backend.yaml
# 1. Servicio para exponer el Backend
# Crea un punto de acceso público (LoadBalancer) para tu aplicación NestJS.
apiVersion: v1
kind: Service
metadata:
  name: teslo-backend-svc
  namespace: teslo-shop
spec:
  # El tipo LoadBalancer solicita una IP pública a tu proveedor de nube o a tu clúster local (si está configurado).
  # En entornos de producción más avanzados, se suele usar un tipo ClusterIP y un Ingress Controller.
  type: ClusterIP
  selector:
    # Redirige el tráfico a cualquier pod con la etiqueta "app: teslo-backend".
    app: teslo-backend
  ports:
    - name: http
      protocol: TCP
      port: 3000 # Puerto público por el que se accederá al servicio.
      targetPort: 3000 # Puerto del contenedor donde corre la app NestJS.

---

# 2. Despliegue del Backend
# Define cómo se debe ejecutar el contenedor de tu aplicación NestJS.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teslo-backend-deployment
  namespace: teslo-shop
spec:
  replicas: 1 # Puedes aumentar el número de réplicas para escalar la aplicación.
  selector:
    matchLabels:
      app: teslo-backend
  template:
    metadata:
      labels:
        app: teslo-backend
    spec:
      containers:
      - name: teslo-backend
        # ¡IMPORTANTE! Reemplaza 'tu-usuario' con tu nombre de usuario de Docker Hub (o el registro que uses).
        image: dmarmijosa/teslo-shop:latest 
        ports:
        - containerPort: 3000
        # Aquí definimos las variables de entorno para la aplicación.
